--- a/css/style.scss
+++ b/css/style.scss
@@ -15,30 +15,25 @@
 
 @import 'pages/404';
 @import 'pages/adoptionForm';
-@import 'pages/appointmentsShelter';
-@import 'pages/appointmentsUser';
+@import 'pages/adoptionRequestsShelter';
+@import 'pages/adoptionRequestsUser';
 @import 'pages/createPet';
 @import 'pages/detailPet';
 @import 'pages/detailPetShelter';
-@import 'pages/directMessage';
-@import 'pages/directMessageShelter';
 @import 'pages/donate';
 @import 'pages/favouritePet';
+@import 'pages/formShelter';
 @import 'pages/formUser';
 @import 'pages/homeShelter';
 @import 'pages/index';
-@import 'pages/location';
 @import 'pages/logInShelter';
 @import 'pages/logInUser';
-@import 'pages/messagesShelter';
-@import 'pages/messagesUser';
 @import 'pages/profileShelter';
 @import 'pages/profileUser';
-@import 'pages/requestsShelter';
-@import 'pages/requestsUser';
 @import 'pages/searchPet';
 @import 'pages/signUpUser';
 @import 'pages/signUpShelter';
+@import 'pages/sponsor';
 @import 'pages/success';
 @import 'pages/updatePet';
 @import 'pages/updateShelter';
