--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -59,6 +59,10 @@
         font-size: 30px;
         font-weight: 500;
     }
+    
+    a{
+        text-decoration: none;
+    }
 
     .quicksand-medium-white-14px {
         color: var(--white);
@@ -145,6 +149,10 @@
     margin-top: 2em;
     margin-bottom: 4em;
 
+    a{
+        text-decoration: none;
+    }
+
     .button-white {
         align-items: center;
         background-color: var(--white);
@@ -199,6 +207,10 @@
     padding: 36px 0;
     margin-left: auto;
     margin-right: auto;
+
+    a{
+        text-decoration: none;
+    }
 
     .button-white {
         align-items: center;
