--- a/css/pages/_searchPet.scss
+++ b/css/pages/_searchPet.scss
@@ -1,11 +1,11 @@
-.top{
+.top {
 
-    .background-orange{
+    .background-orange {
         background-color: var(--porsche);
         height: 6em;
     }
 
-    .josefinsans-normal-white-30px{
+    .josefinsans-normal-white-30px {
         color: var(--white);
         font-family: var(--font-family-josefin_sans);
         font-size: 30px;
@@ -13,7 +13,7 @@
         font-weight: 400;
     }
 
-    .location{
+    .location {
         width: 2em;
         height: 2em;
         position: relative;
@@ -21,10 +21,60 @@
         left: 1.5em;
     }
 
-    p{
+    p {
         position: relative;
         top: -3.25em;
         left: 2.5em;
+    }
+}
+
+//Filter options
+.filter-options{
+
+    a{
+        text-decoration: none;
+    }
+
+    .button-filter{
+        display: flex;
+        align-items: center;
+        background-color: white;
+        border-radius: 15px;
+        height: 60px;
+        width: 10em;
+        display: flex;
+        justify-content: center;
+        margin-left: 3em;
+    }
+
+    .pet-tag{
+        background-color: var(--chetwode-blue);
+        border-radius: 15px;
+        height: 40px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 10em;
+
+        .text-tag{
+            margin-top: auto;
+            margin-bottom: auto;
+            padding-right: 1em;
+        }
+        .josefinsans-normal-white-16px {
+            color: var(--white);
+            font-family: var(--font-family-josefin_sans);
+            font-size: var(--font-size-m);
+            font-style: normal;
+            font-weight: 400;
+        }
+    }
+
+    .delete-all{
+        background-color: white;
+        border: white;
+        color: var(--chetwode-blue);
+        font-weight: 600;
     }
 }
 
@@ -38,7 +88,8 @@
 
     .card {
         display: inline-block;
-        border-radius: 8px;box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
         margin-top: 1.5em;
         margin-bottom: 1.5em;
 
@@ -46,7 +97,7 @@
             border-radius: 8px 8px 0px 0px;
         }
 
-        .card-body{
+        .card-body {
             display: flex;
             justify-content: center;
         }
@@ -76,6 +127,10 @@
     margin-left: auto;
     margin-right: auto;
 
+    a{
+        text-decoration: none;
+    }
+
     .button-white {
         align-items: center;
         background-color: var(--white);
@@ -92,14 +147,14 @@
         text-align: center;
     }
 
-    .quicksand-regular-white-20px{
+    .quicksand-regular-white-20px {
         font-family: Quicksand;
         font-style: normal;
         font-weight: normal;
         font-size: 20px;
         line-height: 20px;
         text-align: center;
-        color:white;
+        color: white;
     }
 
     .josefinsans-normal-porsche-25px {
@@ -117,4 +172,35 @@
         font-style: normal;
         font-weight: 400;
     }
+}
+
+// Pagination
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+}
+
+
+.pagination a.active {
+    background-color:var(--chetwode-blue);
+    color: white;
+}
+
+.pagination a:hover:not(.active) {
+    background-color: var(--cyan);
+}
+
+:root {
+    --font-family-josefin_sans: "Josefin Sans", Helvetica;
+    --font-family-quicksand: "Quicksand", Helvetica;
+    --font-size-m: 16px;
+    --font-size-xxxxl: 35px;
+    --cyan: #C4F7F4;
+    --chetwode-blue: rgba(118, 126, 237, 1);
+    --porsche: rgba(236, 163, 107, 1);
+    --white: rgba(255, 255, 255, 1);
 }
